<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences_screen">

    <PreferenceCategory
        android:title="@string/location">
        <EditTextPreference
            android:key="@string/share_prefs_update_freq"
            android:title="@string/location_updates_frequency"
            android:summary="@string/location_updates_frequency_summary"
            android:defaultValue="0"/>

        <EditTextPreference
            android:key="@string/share_prefs_update_meters"
            android:title="@string/location_min_distance"
            android:summary="@string/location_min_distance_summary"
            android:defaultValue="10" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/location_updates">
        <EditTextPreference
            android:key="@string/share_prefs_insert_freq"
            android:title="@string/insert_frequency"
            android:summary="@string/insert_frequency_summary"
            android:defaultValue="60" />
    </PreferenceCategory>

</PreferenceScreen>