<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WeatherListActivity">

    <item
        android:id="@+id/action_sort_by_location"
        android:title="@string/action_sort_by_location"
        android:orderInCategory="90"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort_by_date"
        android:title="@string/action_sort_by_date"
        android:orderInCategory="91"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_user"
        android:title="@string/action_change_user"
        android:orderInCategory="110"
        app:showAsAction="never"
        />
</menu>
